# npp_emoji_description

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PUBLISHING.md  README.md  SETUP_VS.md
.github/workflows/: CI_build.yml  release.yml
src/: EmojiDescription.cpp  EmojiDescription.rc  PluginDefinition.cpp  PluginDefinition.h
vs.proj/: EmojiDescription.vcxproj
